--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
+    "prettier": "^1.13.6",
     "pusher": "^2.0.0",
     "pusher-js": "^4.2.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
+    "lint-staged": {
+     "src/**/*.{js,jsx,json,css}": [
+       "prettier --single-quote --write",
+       "git add"
+     ]
+   },
   "scripts": {
+    "precommit": "lint-staged",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
